// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > context 1`] = `
"@startdot
digraph Context {
  graph [layout=nop2, overlap=true, splines=true, bgcolor="white", pad=0.15, outputorder=edgesfirst];
  node [fontname="sans-serif", fontsize=14, fontcolor="black", fixedsize=true, pin=true, style=filled, color="black", fillcolor="white", penwidth=1.2];
  edge [fontname="sans-serif", fontsize=12, color="black", fontcolor="black", penwidth=1.2, arrowsize=0.7, headclip=false, tailclip=false];
  SYSTEM_ [shape=circle, pos="0,0!", width=2.777778, height=2.777778, label="FlintFlow", fontsize=18, fillcolor="lightgray"];
  A01 [shape=box, pos="-484.284636,348.000000!", width=1.444444, height=1.944444, label="Founder", sector="west"];
  A02 [shape=box, pos="-452.178257,146.000000!", width=2.411111, height=1.111111, label="Business Analyst", sector="west"];
  A03 [shape=box, pos="-455.402390,-26.000000!", width=2.031944, height=1.111111, label="Administrator", sector="west"];
  A04 [shape=box, pos="-432.433057,-198.000000!", width=1.444444, height=1.111111, label="Guest", sector="west"];
  A05 [shape=box, pos="388.210598,288.000000!", width=2.284722, height=1.111111, label="Payment Gateway", sector="east"];
  A06 [shape=box, pos="366.455820,116.000000!", width=1.905556, height=1.111111, label="LLM Provider", sector="east"];
  A07 [shape=box, pos="425.265546,-56.000000!", width=2.284722, height=1.111111, label="PlantUML Server", sector="east"];
  A08 [shape=box, pos="409.398137,-213.000000!", width=2.031944, height=0.694444, label="Email Service", sector="east"];
  A09 [shape=box, pos="0.000000,-216.000000!", width=2.369444, height=0.611111, label="Scheduler", sector="south"];
  A01_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-432.284636,393.000000!"];
  SYSTEM_A01_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-36.297525,93.179878!"];
  A01_IN_1 [shape=point, style=invis, width=0, height=0, label="", pos="-432.284636,363.000000!"];
  SYSTEM_A01_IN_1 [shape=point, style=invis, width=0, height=0, label="", pos="-44.525492,89.540385!"];
  SYSTEM_A01_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-52.393045,85.176105!"];
  A01_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-432.284636,333.000000!"];
  SYSTEM_A01_OUT_1 [shape=point, style=invis, width=0, height=0, label="", pos="-59.836501,80.122364!"];
  A01_OUT_1 [shape=point, style=invis, width=0, height=0, label="", pos="-432.284636,303.000000!"];
  A02_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-365.378257,161.000000!"];
  SYSTEM_A02_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-70.263887,71.154664!"];
  SYSTEM_A02_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-77.253092,63.497715!"];
  A02_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-365.378257,131.000000!"];
  A03_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-382.252390,-11.000000!"];
  SYSTEM_A03_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-99.805814,-6.228931!"];
  SYSTEM_A03_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-97.392721,-22.686073!"];
  A03_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-382.252390,-41.000000!"];
  A04_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-380.433057,-183.000000!"];
  SYSTEM_A04_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-68.996072,-72.384681!"];
  SYSTEM_A04_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-62.210997,-78.292988!"];
  A04_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-380.433057,-213.000000!"];
  A05_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="305.960598,303.000000!"];
  SYSTEM_A05_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="37.169311,92.835566!"];
  SYSTEM_A05_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="45.362803,89.119112!"];
  A05_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="305.960598,273.000000!"];
  A06_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="297.855820,131.000000!"];
  SYSTEM_A06_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="70.458173,70.962284!"];
  SYSTEM_A06_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="79.162400,61.100854!"];
  A06_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="297.855820,101.000000!"];
  A07_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="343.015546,-41.000000!"];
  SYSTEM_A07_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="97.392721,-22.686073!"];
  SYSTEM_A07_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="92.701563,-37.502270!"];
  A07_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="343.015546,-71.000000!"];
  SYSTEM_A08_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="62.210997,-78.292988!"];
  A08_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="336.248137,-213.000000!"];
  A09_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="0.000000,-194.000000!"];
  SYSTEM_A09_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="0.000000,-100.000000!"];
  A01_IN_0 -> SYSTEM_A01_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>brief answers</TD></TR></TABLE>>, actor_id="A01", flow="in", flow_index=0, pos="e,-36.297525,93.179878 -432.284636,393.000000 -363.617969,393.000000 -294.951302,393.000000 -226.284636,393.000000 -154.196216,393.000000 -102.126530,262.127523 -39.201546,100.634183", lp="-356.584636,393.000000"];
  A01_IN_1 -> SYSTEM_A01_IN_1 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>accepted step</TD></TR></TABLE>>, actor_id="A01", flow="in", flow_index=1, pos="e,-44.525492,89.540385 -432.284636,363.000000 -363.617969,363.000000 -294.951302,363.000000 -226.284636,363.000000 -181.236850,363.000000 -121.260605,243.830708 -48.087679,96.703542", lp="-356.584636,363.000000"];
  SYSTEM_A01_OUT_0 -> A01_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>draft section</TD></TR></TABLE>>, actor_id="A01", flow="out", flow_index=0, pos="e,-432.284636,333.000000 -52.393045,85.176105 -136.235065,221.479247 -204.833081,333.000000 -226.284636,333.000000 -292.284636,333.000000 -358.284636,333.000000 -424.284636,333.000000", lp="-356.584636,333.000000"];
  SYSTEM_A01_OUT_1 -> A01_OUT_1 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>srs document</TD></TR></TABLE>>, actor_id="A01", flow="out", flow_index=1, pos="e,-432.284636,303.000000 -59.836501,80.122364 -151.382975,202.705064 -226.284636,303.000000 -226.284636,303.000000 -292.284636,303.000000 -358.284636,303.000000 -424.284636,303.000000", lp="-360.484636,303.000000"];
  A02_IN_0 -> SYSTEM_A02_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>verification result</TD></TR></TABLE>>, actor_id="A02", flow="in", flow_index=0, pos="e,-70.263887,71.154664 -365.378257,161.000000 -296.711590,161.000000 -228.044923,161.000000 -159.378257,161.000000 -158.999694,161.000000 -122.089810,123.637017 -75.885010,76.847025", lp="-266.278257,161.000000"];
  SYSTEM_A02_OUT_0 -> A02_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>red flag list</TD></TR></TABLE>>, actor_id="A02", flow="out", flow_index=0, pos="e,-365.378257,131.000000 -77.253092,63.497715 -122.421933,100.623972 -159.378257,131.000000 -159.378257,131.000000 -225.378257,131.000000 -291.378257,131.000000 -357.378257,131.000000", lp="-289.678257,131.000000"];
  A03_IN_0 -> SYSTEM_A03_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>account action</TD></TR></TABLE>>, actor_id="A03", flow="in", flow_index=0, pos="e,-99.805814,-6.228931 -382.252390,-11.000000 -313.585724,-11.000000 -244.919057,-11.000000 -176.252390,-11.000000 -176.252390,-11.000000 -146.120481,-9.119452 -107.790279,-6.727245", lp="-302.652390,-11.000000"];
  SYSTEM_A03_OUT_0 -> A03_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>platform metrics</TD></TR></TABLE>>, actor_id="A03", flow="out", flow_index=0, pos="e,-382.252390,-41.000000 -97.392721,-22.686073 -140.635275,-32.758733 -176.015546,-41.000000 -176.252390,-41.000000 -242.252390,-41.000000 -308.252390,-41.000000 -374.252390,-41.000000", lp="-294.852390,-41.000000"];
  A04_IN_0 -> SYSTEM_A04_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>registration request</TD></TR></TABLE>>, actor_id="A04", flow="in", flow_index=0, pos="e,-68.996072,-72.384681 -380.433057,-183.000000 -311.766391,-183.000000 -243.099724,-183.000000 -174.433057,-183.000000 -174.433057,-183.000000 -129.967043,-136.350123 -74.515758,-78.175455", lp="-277.433057,-183.000000"];
  SYSTEM_A04_OUT_0 -> A04_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>registration result</TD></TR></TABLE>>, actor_id="A04", flow="out", flow_index=0, pos="e,-380.433057,-213.000000 -62.210997,-78.292988 -121.081424,-152.381844 -169.248137,-213.000000 -174.433057,-213.000000 -240.433057,-213.000000 -306.433057,-213.000000 -372.433057,-213.000000", lp="-281.333057,-213.000000"];
  A05_IN_0 -> SYSTEM_A05_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>payment result</TD></TR></TABLE>>, actor_id="A05", flow="in", flow_index=0, pos="e,37.169311,92.835566 305.960598,303.000000 250.293932,303.000000 194.627265,303.000000 138.960598,303.000000 121.693956,303.000000 85.068268,212.449549 40.143007,100.262351", lp="226.360598,303.000000"];
  SYSTEM_A05_OUT_0 -> A05_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>payment request</TD></TR></TABLE>>, actor_id="A05", flow="out", flow_index=0, pos="e,305.960598,273.000000 45.362803,89.119112 96.841590,190.253600 138.960598,273.000000 138.960598,273.000000 191.960598,273.000000 244.960598,273.000000 297.960598,273.000000", lp="222.460598,273.000000"];
  A06_IN_0 -> SYSTEM_A06_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>generated draft</TD></TR></TABLE>>, actor_id="A06", flow="in", flow_index=0, pos="e,70.458173,70.962284 297.855820,131.000000 242.189153,131.000000 186.522486,131.000000 130.855820,131.000000 130.114966,131.000000 106.266352,107.024000 76.094904,76.639191", lp="214.355820,131.000000"];
  SYSTEM_A06_OUT_0 -> A06_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>draft request</TD></TR></TABLE>>, actor_id="A06", flow="out", flow_index=0, pos="e,297.855820,101.000000 79.162400,61.100854 107.593781,83.045385 130.855820,101.000000 130.855820,101.000000 183.855820,101.000000 236.855820,101.000000 289.855820,101.000000", lp="222.155820,101.000000"];
  A07_IN_0 -> SYSTEM_A07_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>diagram png</TD></TR></TABLE>>, actor_id="A07", flow="in", flow_index=0, pos="e,97.392721,-22.686073 343.015546,-41.000000 287.348879,-41.000000 231.682213,-41.000000 176.015546,-41.000000 176.015546,-41.000000 144.805337,-33.730082 105.184139,-24.500959", lp="275.115546,-41.000000"];
  SYSTEM_A07_OUT_0 -> A07_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>puml source</TD></TR></TABLE>>, actor_id="A07", flow="out", flow_index=0, pos="e,343.015546,-71.000000 92.701563,-37.502270 138.243087,-55.926022 175.504335,-71.000000 176.015546,-71.000000 229.015546,-71.000000 282.015546,-71.000000 335.015546,-71.000000", lp="275.115546,-71.000000"];
  SYSTEM_A08_OUT_0 -> A08_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>email request</TD></TR></TABLE>>, actor_id="A08", flow="out", flow_index=0, pos="e,336.248137,-213.000000 62.210997,-78.292988 121.081424,-152.381844 169.248137,-213.000000 169.248137,-213.000000 222.248137,-213.000000 275.248137,-213.000000 328.248137,-213.000000", lp="260.548137,-213.000000"];
  A09_IN_0 -> SYSTEM_A09_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>housekeeping tick</TD></TR></TABLE>>, actor_id="A09", flow="in", flow_index=0, pos="e,0.000000,-100.000000 0.000000,-194.000000 0.000000,-173.333333 0.000000,-152.666667 0.000000,-132.000000 0.000000,-132.000000 0.000000,-121.761880 0.000000,-108.000000", lp="0.000000,-163.000000"];
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > erd 1`] = `
"@startchen
skinparam monochrome true
skinparam ranksep 20
skinparam linetype ortho
entity "User" as E01 {
}
entity "Project" as E02 {
}
entity "Spine" as E03 {
}
entity "ChatSession" as E04 {
}
entity "CreditLedger" as E05 {
}
entity "Subscription" as E06 {
}
entity "Notification" as E07 {
}
entity "Baseline" as E08 {
}
entity "ChangeRecord" as E09 {
}
entity "UsageRecord" as E10 {
}
entity "Flag" as E11 {
}
entity "Diagram" as E12 {
}
relationship "has" as R_E01_E02 {
}
E01 -1- R_E01_E02
R_E01_E02 -N- E02
relationship "has" as R_E01_E05 {
}
E01 -1- R_E01_E05
R_E01_E05 -N- E05
relationship "has" as R_E01_E07 {
}
E01 -1- R_E01_E07
R_E01_E07 -N- E07
relationship "has" as R_E02_E03 {
}
E02 -1- R_E02_E03
R_E02_E03 -N- E03
relationship "has" as R_E02_E04 {
}
E02 -1- R_E02_E04
R_E02_E04 -N- E04
relationship "has" as R_E03_E08 {
}
E03 -1- R_E03_E08
R_E03_E08 -N- E08
relationship "has" as R_E03_E09 {
}
E03 -1- R_E03_E09
R_E03_E09 -N- E09
relationship "has" as R_E03_E11 {
}
E03 -1- R_E03_E11
R_E03_E11 -N- E11
relationship "has" as R_E03_E12 {
}
E03 -1- R_E03_E12
R_E03_E12 -N- E12
relationship "has" as R_E05_E10 {
}
E05 -1- R_E05_E10
R_E05_E10 -N- E10
relationship "has" as R_E06_E01 {
}
E06 -1- R_E06_E01
R_E06_E01 -N- E01
@endchen
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 1 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Founder";
  START [label="Founder", shape=diamond, style=solid];
  S01 [label="Login"];
  S03 [label="Forgot Password", shape=ellipse];
  S04 [label="Onboarding"];
  S05 [label="Project Dashboard"];
  S06 [label="Create Project", shape=ellipse];
  subgraph cluster_S07 {
    label="Project Workspace"; style=solid;
    S07_T1 [label="Chat"];
    S07_T2 [label="Document"];
    S07_T3 [label="History"];
  }
  S08 [label="Diagram Preview"];
  S09 [label="Verification & Change Panel"];
  S10 [label="Export"];
  S11 [label="Plan & Pricing"];
  S12 [label="Billing History"];
  S13 [label="Notification Center"];
  START -> S01;
  START -> S04;
  S01 -> S03;
  S01 -> S05;
  S04 -> S05;
  S05 -> S06;
  S05 -> S07_T1 [lhead=cluster_S07];
  S05 -> S11;
  S05 -> S13;
  S06 -> S07_T1 [lhead=cluster_S07];
  S07_T1 -> S08 [ltail=cluster_S07];
  S07_T1 -> S09 [ltail=cluster_S07];
  S07_T1 -> S10 [ltail=cluster_S07];
  S09 -> S10;
  S11 -> S12;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 2 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Business Analyst";
  START [label="Business Analyst", shape=diamond, style=solid];
  S01 [label="Login"];
  S04 [label="Onboarding"];
  S05 [label="Project Dashboard"];
  subgraph cluster_S07 {
    label="Project Workspace"; style=solid;
    S07_T1 [label="Chat"];
    S07_T2 [label="Document"];
    S07_T3 [label="History"];
  }
  S08 [label="Diagram Preview"];
  S09 [label="Verification & Change Panel"];
  S10 [label="Export"];
  S13 [label="Notification Center"];
  START -> S01;
  START -> S04;
  S01 -> S05;
  S04 -> S05;
  S05 -> S07_T1 [lhead=cluster_S07];
  S05 -> S13;
  S07_T1 -> S08 [ltail=cluster_S07];
  S07_T1 -> S09 [ltail=cluster_S07];
  S07_T1 -> S10 [ltail=cluster_S07];
  S09 -> S10;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 3 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Administrator";
  START [label="Administrator", shape=diamond, style=solid];
  S01 [label="Login"];
  S14 [label="Admin User List"];
  S15 [label="Admin User Detail"];
  S16 [label="Admin Metrics Dashboard"];
  S17 [label="Admin AI Cost Report"];
  S18 [label="Admin Prompt Templates"];
  S19 [label="Admin Audit Log"];
  START -> S01;
  S01 -> S14;
  S14 -> S15;
  S14 -> S16;
  S14 -> S17;
  S14 -> S18;
  S14 -> S19;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 4 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Guest";
  START [label="Guest", shape=diamond, style=solid];
  S01 [label="Login"];
  S02 [label="Register"];
  S03 [label="Forgot Password", shape=ellipse];
  START -> S01;
  S01 -> S02;
  S01 -> S03;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S01 1`] = `
"@startsalt
{+
  <b>Login
  {#
    <b>Function | <b>Description
    Submit Credentials | Authenticates the user with email and password and issues an access token.
    Log In with Google | Authenticates via Google OAuth and links or creates the local account.
    Toggle Password Visibility | Switches the password input between masked and plain text.
    Navigate to Register | Navigates to the registration screen.
    Open Forgot Password | Opens the Forgot Password popup over the login form.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S05 1`] = `
"@startsalt
{+
  <b>Project Dashboard
  {#
    <b>Function | <b>Description
    List Projects | Shows the user's projects with name, status, readiness score and last activity.
    Search Projects | Filters the project cards by name substring.
    Filter by Status | Restricts the list to active or archived projects.
    Open Project | Opens the Project Workspace and resumes at the stored pipeline position.
    Archive Project | Archives the project after confirmation; archived projects stay readable.
    Open Create Project | Opens the Create Project popup.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S07 1`] = `
"@startsalt
{+
  <b>Project Workspace
  {#
    <b>Function | <b>Description
    Send Chat Message | Sends the user turn to the pipeline orchestrator for the current step.
    Stream AI Response | Streams the model response into the chat pane over SSE with a cancel control.
    Switch Tab | Switches between Chat, Document and History without losing pane state.
    Render Document Pane | Renders the assembled SRS read-only with status badges per section.
    Accept Step at Gate | Accepts the current step's output, commits its transaction and advances the pipeline.
    Request Revision at Gate | Sends the user's revision notes back to the step within the turn ceiling.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S09 1`] = `
"@startsalt
{+
  <b>Verification & Change Panel
  {#
    <b>Function | <b>Description
    List Open Flags | Shows open red and yellow flags with rule, target and remediation step.
    Waive Flag | Waives an eligible red flag with a mandatory typed reason.
    Submit Change Request | Turns a natural-language change request into a previewable op batch.
    Preview Impact Diff | Shows a field-level before/after diff and the dependent sections that become stale.
    Apply Change Transaction | Applies the whole op batch atomically and records the change history.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S10 1`] = `
"@startsalt
{+
  <b>Export
  {#
    <b>Function | <b>Description
    Configure Export Options | Chooses between working draft and baseline export and shows blockers.
    Export Working Draft | Renders the current document to Word with a DRAFT watermark on every page.
    Export Baseline Document | Renders the clean document from the baseline snapshot, not from the current Spine.
    Show Export Blockers | Explains which precondition fails and links the shortcut to fix it.
    Download Exported File | Streams the generated .docx to the browser with a versioned file name.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > usecase part 1 1`] = `
"@startuml
skinparam monochrome true
left to right direction
title Use Cases — Founder
actor "Founder" as A01
actor "Business Analyst" as A02
actor "Administrator" as A03
actor "Guest" as A04
rectangle "FlintFlow" {
  usecase "Log In" as UC02
  usecase "Reset Password" as UC03
  usecase "Complete Onboarding" as UC04
  usecase "Create Project" as UC06
  usecase "Browse Projects" as UC05
  usecase "Resume Project" as UC07
  usecase "Refine Product Brief" as UC08
  usecase "Generate SRS Content" as UC09
  usecase "Accept Step At Gate" as UC10
  usecase "Render Diagrams" as UC12
  usecase "Request Change" as UC11
  usecase "Preview Change Impact" as UC23
  usecase "Verify Document" as UC13
  usecase "Waive Red Flag" as UC14
  usecase "Sign Baseline" as UC15
  usecase "Export Word Document" as UC16
  usecase "Purchase Credits" as UC17
  usecase "View Billing History" as UC18
  usecase "Receive Notifications" as UC19
  usecase "Archive Project" as UC24
}
actor "Payment Gateway" as A05 <<system>>
actor "LLM Provider" as A06 <<system>>
actor "PlantUML Server" as A07 <<system>>
actor "Email Service" as A08 <<system>>
A01 -- UC02
A02 -- UC02
A03 -- UC02
A04 -- UC02
A01 -- UC03
UC03 -- A08
A01 -- UC06
A01 -- UC05
A01 -- UC07
A01 -- UC08
UC08 -- A06
A01 -- UC09
UC09 -- A06
UC12 -- A07
A01 -- UC11
A02 -- UC15
A01 -- UC16
A01 -- UC17
UC17 -- A05
A01 -- UC18
A01 -- UC19
A01 -- UC24
UC04 ..> UC06 : <<extend>>
UC09 ..> UC10 : <<include>>
UC09 ..> UC12 : <<include>>
UC11 ..> UC23 : <<include>>
UC14 ..> UC15 : <<extend>>
UC15 ..> UC13 : <<include>>
@enduml
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > usecase part 2 1`] = `
"@startuml
skinparam monochrome true
left to right direction
title Use Cases — Administrator / Guest / Scheduler
actor "Administrator" as A03
actor "Guest" as A04
rectangle "FlintFlow" {
  usecase "Inspect Platform Accounts" as UC20
  usecase "Monitor Platform Metrics" as UC21
  usecase "Register Account" as UC01
  usecase "Run Scheduled Housekeeping" as UC22
}
actor "Email Service" as A08 <<system>>
actor "Scheduler" as A09 <<time>>
A03 -- UC20
A03 -- UC21
A04 -- UC01
UC01 -- A08
UC22 -- A09
@enduml
"
`;
